2018-05-09 Magnus Hagdorn
 * piccolo2/client/PiccoloBaseClient.py: add methods to use client as a
   context manager; add new method to connect to piccolo server rather than
   connecting automatically when object is created
 * piccolo2/client/PiccoloJSONRPCClient.py: implement new connect method
 * piccolo2/client/PiccoloXbeeClient.py: ditto
 * piccolo2/client/piccoloConnect.py: add new helper context manager that
   opens either a jsonrpc or xbee connection depending on an argument
 * piccolo2/client/__init__.py: load new module
 * piccolo2/precord.py: use context manager to open connection to piccolo
   server
 * piccolo2/ptriggered.py: ditto
 * piccolo-client.py: ditto

2018-04-23 Magnus Hagdorn
 * piccolo2/ptriggered.py: fix minor bugs

2018-04-18 Magnus Hagdorn
 * piccolo2/ptriggered.py: updated trigger script

2017-12-13 Magnus Hagdorn
 * piccolo2/client/PiccoloBaseClient.py: handle extended status

2017-11-06 Magnus Hagdorn
 * piccolo2/precord.py: add option to print version
 * piccolo2/ptriggered.py: ditto and rename

2017-11-06 Magnus Hagdorn
 * piccolo2/client/__init__.py: set __version__
 * setup.py: get version from hg tag

2017-02-22 Magnus Hagdorn
 * piccolo2/client/PiccoloBaseClient.py: the client requests and stores a 
   listener ID which is used for client specific messages
 
2017-02-14 Magnus Hagdorn
 * piccolo2/client/PiccoloBaseClient.py: when requesting status turn result 
   into a status object

2017-02-13 Magnus Hagdorn
 * piccolo2/precord.py: add simple program to record spectra
 * setup.py: add new program

2016-05-17 Magnus Hagdorn
 * piccolo2/client/PiccoloXbeeClient.py: do not die if hardware module is not
   available

2016-04-29 Magnus Hagdorn
 * piccolo2/client/PiccoloXbeeClient.py: add timeout

2016-04-29 Magnus Hagdorn
 * piccolo-client.py: tidy up
 * piccolo2/client/PiccoloBaseClient.py: always return a SpectraList object
   when the getSpectra command is called

2016-04-29 Magnus Hagdorn